Add Engine Editor UI

--- a/BaseEngine.vcxproj
+++ b/BaseEngine.vcxproj
@@ -33,13 +33,16 @@
     <ClCompile Include="Engine\Core\SceneBase.cpp" />
     <ClCompile Include="Engine\Core\SceneManager.cpp" />
     <ClCompile Include="Engine\Core\SceneRegistry.cpp" />
+    <ClCompile Include="Engine\Core\ScriptComponent.cpp" />
     <ClCompile Include="Engine\Core\Timer.cpp" />
     <ClCompile Include="Engine\Core\Transform.cpp" />
     <ClCompile Include="Engine\Core\Window.cpp" />
     <ClCompile Include="Engine\Graphics\Camera2D.cpp" />
     <ClCompile Include="Engine\Graphics\D3DDevice.cpp" />
     <ClCompile Include="Engine\Graphics\DebugRenderer.cpp" />
+    <ClCompile Include="Engine\Graphics\GridRenderer.cpp" />
     <ClCompile Include="Engine\Graphics\RenderManager.cpp" />
+    <ClCompile Include="Engine\Graphics\RenderTexture.cpp" />
     <ClCompile Include="Engine\Graphics\ShaderManager.cpp" />
     <ClCompile Include="Engine\Graphics\SpriteRenderer.cpp" />
     <ClCompile Include="Engine\Graphics\TextureManager.cpp" />
@@ -53,8 +56,10 @@
     <ClCompile Include="Engine\Resource\AnimationClip.cpp" />
     <ClCompile Include="Engine\Resource\Font.cpp" />
     <ClCompile Include="Engine\Resource\Resources.cpp" />
+    <ClCompile Include="Engine\Resource\SceneData.cpp" />
     <ClCompile Include="Engine\Resource\SpriteSheet.cpp" />
     <ClCompile Include="Engine\Resource\Texture.cpp" />
+    <ClCompile Include="Engine\Serialization\SceneSerializer.cpp" />
     <ClCompile Include="Engine\UI\Button.cpp" />
     <ClCompile Include="Engine\UI\Canvas.cpp" />
     <ClCompile Include="Engine\UI\Image.cpp" />
@@ -66,8 +71,6 @@
     <ClCompile Include="Engine\UI\UIBase.cpp" />
     <ClCompile Include="Game\main.cpp" />
     <ClCompile Include="Game\Scenes\AnimationScene.cpp" />
-    <ClCompile Include="Game\Scenes\MyScene.cpp" />
-    <ClCompile Include="Game\Scenes\TestScene.cpp" />
     <ClCompile Include="Game\Scripts\MovementController.cpp" />
     <ClCompile Include="Game\Scripts\Player.cpp" />
     <ClCompile Include="Inc\ImGui\imgui.cpp" />
@@ -79,6 +82,15 @@
     <ClCompile Include="Tool\AnimationImporter.cpp" />
     <ClCompile Include="Tool\AnimationImporterWindow.cpp" />
     <ClCompile Include="Tool\AnimatorWindow.cpp" />
+    <ClCompile Include="Tool\ConsoleWindow.cpp" />
+    <ClCompile Include="Tool\EditorManager.cpp" />
+    <ClCompile Include="Tool\EditorWindow.cpp" />
+    <ClCompile Include="Tool\GameViewWindow.cpp" />
+    <ClCompile Include="Tool\HierarchyWindow.cpp" />
+    <ClCompile Include="Tool\InspectorWindow.cpp" />
+    <ClCompile Include="Tool\ProjectWindow.cpp" />
+    <ClCompile Include="Tool\SceneViewWindow.cpp" />
+    <ClCompile Include="Tool\SheetViewerWindow.cpp" />
     <ClCompile Include="Tool\SpriteImporter.cpp" />
     <ClCompile Include="Tool\SpriteImporterWindow.cpp" />
   </ItemGroup>
@@ -94,19 +106,23 @@
     <ClInclude Include="Engine\Core\Animator.h" />
     <ClInclude Include="Engine\Core\Application.h" />
     <ClInclude Include="Engine\Core\Component.h" />
+    <ClInclude Include="Engine\Core\EditorState.h" />
     <ClInclude Include="Engine\Core\Entity.h" />
     <ClInclude Include="Engine\Core\ExceptionCOM.h" />
     <ClInclude Include="Engine\Core\GameObject.h" />
     <ClInclude Include="Engine\Core\SceneBase.h" />
     <ClInclude Include="Engine\Core\SceneManager.h" />
     <ClInclude Include="Engine\Core\SceneRegistry.h" />
+    <ClInclude Include="Engine\Core\ScriptComponent.h" />
     <ClInclude Include="Engine\Core\Timer.h" />
     <ClInclude Include="Engine\Core\Transform.h" />
     <ClInclude Include="Engine\Core\Window.h" />
     <ClInclude Include="Engine\Graphics\Camera2D.h" />
     <ClInclude Include="Engine\Graphics\D3DDevice.h" />
     <ClInclude Include="Engine\Graphics\DebugRenderer.h" />
+    <ClInclude Include="Engine\Graphics\GridRenderer.h" />
     <ClInclude Include="Engine\Graphics\RenderManager.h" />
+    <ClInclude Include="Engine\Graphics\RenderTexture.h" />
     <ClInclude Include="Engine\Graphics\ShaderManager.h" />
     <ClInclude Include="Engine\Graphics\SpriteRenderer.h" />
     <ClInclude Include="Engine\Graphics\TextureManager.h" />
@@ -122,8 +138,10 @@
     <ClInclude Include="Engine\Resource\Font.h" />
     <ClInclude Include="Engine\Resource\Prefab.h" />
     <ClInclude Include="Engine\Resource\Resources.h" />
+    <ClInclude Include="Engine\Resource\SceneData.h" />
     <ClInclude Include="Engine\Resource\SpriteSheet.h" />
     <ClInclude Include="Engine\Resource\Texture.h" />
+    <ClInclude Include="Engine\Serialization\SceneSerializer.h" />
     <ClInclude Include="Engine\UI\Button.h" />
     <ClInclude Include="Engine\UI\Canvas.h" />
     <ClInclude Include="Engine\UI\Image.h" />
@@ -133,14 +151,13 @@
     <ClInclude Include="Engine\UI\Slider.h" />
     <ClInclude Include="Engine\UI\Text.h" />
     <ClInclude Include="Engine\UI\UIBase.h" />
-    <ClInclude Include="Game\RegisterScenes.h" />
     <ClInclude Include="Game\Scenes\AnimationScene.h" />
-    <ClInclude Include="Game\Scenes\MyScene.h" />
-    <ClInclude Include="Game\Scenes\TestScene.h" />
     <ClInclude Include="Game\Scripts\CollisionTest.h" />
     <ClInclude Include="Game\Scripts\HpControll.h" />
     <ClInclude Include="Game\Scripts\MovementController.h" />
     <ClInclude Include="Game\Scripts\Player.h" />
+    <ClInclude Include="Game\Scripts\PlayerController.h" />
+    <ClInclude Include="Game\Scripts\RotateScript.h" />
     <ClInclude Include="Game\Scripts\SceneController.h" />
     <ClInclude Include="Inc\ImGui\imconfig.h" />
     <ClInclude Include="Inc\ImGui\imgui.h" />
@@ -153,6 +170,15 @@
     <ClInclude Include="Tool\AnimationImporter.h" />
     <ClInclude Include="Tool\AnimationImporterWindow.h" />
     <ClInclude Include="Tool\AnimatorWindow.h" />
+    <ClInclude Include="Tool\ConsoleWindow.h" />
+    <ClInclude Include="Tool\EditorManager.h" />
+    <ClInclude Include="Tool\EditorWindow.h" />
+    <ClInclude Include="Tool\GameViewWindow.h" />
+    <ClInclude Include="Tool\HierarchyWindow.h" />
+    <ClInclude Include="Tool\InspectorWindow.h" />
+    <ClInclude Include="Tool\ProjectWindow.h" />
+    <ClInclude Include="Tool\SceneViewWindow.h" />
+    <ClInclude Include="Tool\SheetViewerWindow.h" />
     <ClInclude Include="Tool\SpriteImporter.h" />
     <ClInclude Include="Tool\SpriteImporterWindow.h" />
   </ItemGroup>
